[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/ships/PlayerShipv2.tscn" type="PackedScene" id=1]
[ext_resource path="res://rock001.glb" type="PackedScene" id=2]
[ext_resource path="res://download.jpg" type="Texture" id=3]
[ext_resource path="res://scripts/ui/DebugViz.gd" type="Script" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 1.22612
height = 1.90219

[sub_resource type="PanoramaSky" id=2]
panorama = ExtResource( 3 )

[sub_resource type="Environment" id=3]
background_mode = 2
background_sky = SubResource( 2 )

[node name="World" type="Spatial"]

[node name="Rock001" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.8612, 1.30249, 13.998 )

[node name="rock001" parent="Rock001" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Rock001"]
transform = Transform( 0.177232, 0, 1.99213, 0, 2, 0, -1.99213, 0, 0.177232, -0.57214, 0.438417, -0.658047 )
shape = SubResource( 1 )

[node name="rock002" parent="." instance=ExtResource( 2 )]
transform = Transform( 1.15744, -0.694563, -0.483234, 0.853898, 1.0688, -1.71515e-08, 0.425671, -0.255439, 1.31396, 6.52088, 3.88234, 19.3318 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="WorldEnvironment"]
transform = Transform( -0.930432, -0.0203319, 0.3659, 0.338834, -0.428074, 0.837821, 0.139598, 0.903515, 0.405183, 0, 17.3012, 14.0559 )

[node name="OmniLight" type="OmniLight" parent="WorldEnvironment"]
light_energy = 0.28
light_indirect_energy = 0.6
omni_range = 4096.0
omni_attenuation = 2.2974

[node name="PlayerShip" parent="." instance=ExtResource( 1 )]

[node name="DebugViz" type="Node" parent="."]
script = ExtResource( 5 )

[node name="PositionLbl" type="Label" parent="DebugViz"]
anchor_top = 0.668
anchor_bottom = 0.861
margin_top = 121.2
margin_right = 151.0
margin_bottom = 83.4
text = "Position:
   X 0
   Y 0
   Z 0"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VelocityLbl" type="Label" parent="DebugViz"]
anchor_top = 0.668
anchor_bottom = 0.861
margin_left = 98.3849
margin_top = 121.2
margin_right = 249.385
margin_bottom = 83.4
text = "Velocity:
   vX 0
   vY 0
   vZ 0"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FacingLbl" type="Label" parent="DebugViz"]
margin_left = 1.0
margin_top = 510.0
margin_right = 154.0
margin_bottom = 530.0
__meta__ = {
"_edit_use_anchors_": false
}
